# pimiv

./: CMakeLists.txt  Dockerfile  README.md
binaries/linux/: CMakeCache.txt  Makefile  PIM  cmake_install.cmake  libcloudproviders.so.0  libgraphene-1.0.so.0  libminizip.so.1  libxlsxwriter.so.4  style.css
binaries/linux/layout/: home.ui  login-user.ui  register-user.ui  report.ui
binaries/windows/: CMakeCache.txt  Makefile  cmake_install.cmake
binaries/windows/db/: users.txt
binaries/windows/layout/: register-company.ui
src/: callbacks.c  callbacks.h  db.c  main.c  structs.c  structs.h  style.css  ui.c  ui.h  usecase.c  util.c  util.h
src/components/: table-company-array.h  table-company.c  table-company.h  table-report-array.h  table-report.c  table-report.h
src/include/: callbacks.h  db.h  structs.h  ui.h  usecase.h  util.h
src/layout/: home.ui  login-user.ui  register-company.ui  report.ui
